RESOLVED FIXED21537
Re-targeting a running transition fails
https://bugs.webkit.org/show_bug.cgi?id=21537
Summary Re-targeting a running transition fails
Simon Fraser (smfr)
Reported 2008-10-10 16:47:47 PDT
If a transform transition is running on an element, and a timer fires to sets a new transform, then the element fails to start a new transition to that destination; it snaps there.
Attachments
Testcase (1.70 KB, text/html)
2008-10-10 16:48 PDT, Simon Fraser (smfr)
no flags
Patch, changelog, testcase (4.93 KB, patch)
2008-10-10 17:06 PDT, Simon Fraser (smfr)
darin: review+
Simon Fraser (smfr)
Comment 1 2008-10-10 16:48:13 PDT
Created attachment 24280 [details] Testcase
Simon Fraser (smfr)
Comment 2 2008-10-10 16:53:15 PDT
This was regressed by bug 21025.
Simon Fraser (smfr)
Comment 3 2008-10-10 17:06:42 PDT
Created attachment 24284 [details] Patch, changelog, testcase
Darin Adler
Comment 4 2008-10-10 17:11:26 PDT
Comment on attachment 24284 [details] Patch, changelog, testcase +/* -webkit-transition-property: -webkit-transform;*/ We normally don't like to include commented-out code, even in test cases. r=me
Simon Fraser (smfr)
Comment 5 2008-10-10 17:32:48 PDT
Committed r37495 M WebCore/ChangeLog M WebCore/page/animation/CompositeAnimation.cpp M LayoutTests/ChangeLog A LayoutTests/transitions/retargetted-transition-expected.txt A LayoutTests/transitions/retargetted-transition.html r37495 = 02722eae1d174a9c28de1e1191775d3616520fa1 (trunk)
Note You need to log in before you can comment on or make changes to this bug.