2008-10-10  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=21537

        Fix re-targetting a running transition; if the target property
        changes, we do need to make a new ImplicitAnimation.

        Test: transitions/retargetted-transition.html

        * page/animation/CompositeAnimation.cpp:
        (WebCore::CompositeAnimationPrivate::updateTransitions):

Canonical link: https://commits.webkit.org/29740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37495 268f45cc-cd09-0410-ab3c-d52691b4dbfc